@@ -22,6 +22,9 @@
 # 	suggest  (optional - used by munin-config)
 #
 # $Log$
+# Revision 1.6  2004/12/10 11:48:42  jimmyo
+# linux/cps_ plugin now groks high numbers.
+#
 # Revision 1.5  2004/12/10 10:47:49  jimmyo
 # Change name from ${scale} to ${graph_period}, to be more consistent.
 #
@@ -186,10 +189,22 @@ sub ipvs
 	{
 		next if /^IP Virtual Server/;
 		next if /^Prot\s+LocalAddress/;
-		if (/^(\w+)\s+([\w\.-]+):([\w\d]+)\s+(\d+)\s+/)
+		if (/^(\w+)\s+([\w\.-]+):([\w\d]+)\s+(\d+)[KMG]?\s+/)
 		{
 			$cvip  = ($vip?$2:"");
 			$cport = $3;
+		}
+		elsif (/^\s+->\s+([^:]+):(\S+)\s+(\d+)G\s+/)
+		{
+			$ipvs->{$cvip}->{$cport}->{$1} += ($3*1000000000);
+		}
+		elsif (/^\s+->\s+([^:]+):(\S+)\s+(\d+)M\s+/)
+		{
+			$ipvs->{$cvip}->{$cport}->{$1} += ($3*1000000);
+		}
+		elsif (/^\s+->\s+([^:]+):(\S+)\s+(\d+)K\s+/)
+		{
+			$ipvs->{$cvip}->{$cport}->{$1} += ($3*1000);
 		}
 		elsif (/^\s+->\s+([^:]+):(\S+)\s+(\d+)\s+/)
 		{
